Add Data Understanding

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -35,6 +35,34 @@
     "\n",
     "The ultimate goal is to build a sentiment analysis model that helps businesses quickly interpret large volumes of customer feedback without manual review."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28109bab",
+   "metadata": {},
+   "source": [
+    "### Data Understanding\n",
+    "\n",
+    "The dataset comes from CrowdFlower and contains over 9,000 tweets related to Apple and Google products. Each tweet has been human-labeled for sentiment as:\n",
+    "\n",
+    "1. Positive emotion\n",
+    "\n",
+    "2. Negative emotion\n",
+    "\n",
+    "3. No emotion toward brand/product\n",
+    "\n",
+    "4. Unclear/I can’t tell\n",
+    "\n",
+    "##### Key characteristics:\n",
+    "\n",
+    "* Textual Data: Tweets are short, noisy, and often contain slang, hashtags, mentions, and URLs, which makes preprocessing crucial.\n",
+    "\n",
+    "* Target Variable: The label indicating whether a sentiment is directed at a brand or product.\n",
+    "\n",
+    "* Class Distribution: The dataset is slightly imbalanced, with more neutral/no-emotion tweets compared to positive or negative ones.\n",
+    "\n",
+    "This dataset is well-suited for the business problem because it directly reflects real customer opinions on social media about Apple and Google. The labeled sentiments provide a foundation for training supervised machine learning models to classify unseen tweets in real time."
+   ]
   }
  ],
  "metadata": {
@@ -45,7 +73,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.15"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
