Add label encoding for target variable

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -13,7 +13,7 @@
    "id": "29e81246",
    "metadata": {},
    "source": [
-    "### BUSINESS UNDERSTANDING"
+    "### Business Understanding"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "45f85880",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "435299e9",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "572bc79b",
    "metadata": {},
    "outputs": [
@@ -499,86 +499,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "78db59a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_text</th>\n",
-       "      <th>cleaned_tweet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>.@wesley83 I have a 3G iPhone. After 3 hrs twe...</td>\n",
-       "      <td>g iphone hr tweeting riseaustin dead need upgr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>@jessedee Know about @fludapp ? Awesome iPad/i...</td>\n",
-       "      <td>know awesome ipadiphone app youll likely appre...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>@swonderlin Can not wait for #iPad 2 also. The...</td>\n",
-       "      <td>wait ipad also sale sxsw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>@sxsw I hope this year's festival isn't as cra...</td>\n",
-       "      <td>hope year festival isnt crashy year iphone app...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>@sxtxstate great stuff on Fri #SXSW: Marissa M...</td>\n",
-       "      <td>great stuff fri sxsw marissa mayer google tim ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          tweet_text  \\\n",
-       "0  .@wesley83 I have a 3G iPhone. After 3 hrs twe...   \n",
-       "1  @jessedee Know about @fludapp ? Awesome iPad/i...   \n",
-       "2  @swonderlin Can not wait for #iPad 2 also. The...   \n",
-       "3  @sxsw I hope this year's festival isn't as cra...   \n",
-       "4  @sxtxstate great stuff on Fri #SXSW: Marissa M...   \n",
-       "\n",
-       "                                       cleaned_tweet  \n",
-       "0  g iphone hr tweeting riseaustin dead need upgr...  \n",
-       "1  know awesome ipadiphone app youll likely appre...  \n",
-       "2                           wait ipad also sale sxsw  \n",
-       "3  hope year festival isnt crashy year iphone app...  \n",
-       "4  great stuff fri sxsw marissa mayer google tim ...  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize tools\n",
     "stop_words = set(stopwords.words('english'))\n",
@@ -594,11 +518,52 @@
     "    tokens = [lemmatizer.lemmatize(word) for word in tokens if word not in stop_words]  # Remove stopwords + lemmatize\n",
     "    return ' '.join(tokens)\n",
     "\n",
-    "# Apply cleaning to tweets\n",
-    "df['cleaned_tweet'] = df['tweet_text'].apply(clean_text)\n",
+    "# # Apply cleaning to tweets\n",
+    "# df['cleaned_tweet'] = df['tweet_text'].apply(clean_text)\n",
     "\n",
-    "# Preview cleaned text\n",
-    "df[['tweet_text', 'cleaned_tweet']].head()\n"
+    "# # Preview cleaned text\n",
+    "# df[['tweet_text', 'cleaned_tweet']].head()\n",
+    "\n",
+    "# Binary dataset\n",
+    "df_binary = df[df['is_there_an_emotion_directed_at_a_brand_or_product'].isin(\n",
+    "    ['Positive emotion', 'Negative emotion']\n",
+    ")].copy()\n",
+    "\n",
+    "df_binary['cleaned_tweet'] = df_binary['tweet_text'].apply(clean_text)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29b3e00e",
+   "metadata": {},
+   "source": [
+    "#### Encode Labels\n",
+    "\n",
+    "Machine learning models work with numbers, not strings → we use Label Encoding to convert classes into integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "922ed5ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Negative emotion': 0, 'Positive emotion': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "df_binary['label'] = label_encoder.fit_transform(\n",
+    "    df_binary['is_there_an_emotion_directed_at_a_brand_or_product']\n",
+    ")\n",
+    "print(dict(zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_))))"
    ]
   }
  ],
