--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -13,7 +13,7 @@
    "id": "29e81246",
    "metadata": {},
    "source": [
-    "### Business Understanding"
+    "## 1.0 Business Understanding"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "id": "28109bab",
    "metadata": {},
    "source": [
-    "### Data Understanding\n",
+    "## 2.0 Data Understanding\n",
     "\n",
     "The dataset comes from CrowdFlower and contains over 9,000 tweets related to Apple and Google products. Each tweet has been human-labeled for sentiment as:\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "45f85880",
    "metadata": {},
    "outputs": [
@@ -74,6 +74,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\erastus.kaiba\\AppData\\Local\\anaconda3\\envs\\learn-env\\lib\\site-packages\\xgboost\\compat.py:93: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n",
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\erastus.kaiba\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
@@ -84,7 +86,8 @@
       "[nltk_data]     C:\\Users\\erastus.kaiba\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\erastus.kaiba\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     C:\\Users\\erastus.kaiba\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
     {
@@ -93,7 +96,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,9 +116,12 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from imblearn.pipeline import Pipeline\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -133,7 +139,7 @@
    "id": "8c7578c8",
    "metadata": {},
    "source": [
-    "#### Exploratory Data Analysis"
+    "## 3.0 Exploratory Data Analysis"
    ]
   },
   {
@@ -409,7 +415,7 @@
    "id": "9275f1f2",
    "metadata": {},
    "source": [
-    "####  Data Preparation"
+    "## 4.0  Data Preparation"
    ]
   },
   {
@@ -509,10 +515,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35c79b1e",
+   "metadata": {},
+   "source": [
+    "## 5.0 NLP Pre-Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1784de64",
    "metadata": {},
    "source": [
-    "#### ADVANCED TEXT CLEANING\n",
+    "### 5.1 Text preprocessing \n",
     "\n",
     "Tweets contain noise such as URLs, hashtags, mentions, punctuation, numbers, and filler words (stopwords). If we feed this raw text directly into a model, it can mislead the classifier. Therefore, we clean and normalize the text so that the model focuses only on meaningful tokens."
    ]
@@ -559,7 +573,7 @@
    "id": "29b3e00e",
    "metadata": {},
    "source": [
-    "#### Encode Labels\n",
+    "### 5.2  Encode Labels\n",
     "\n",
     "Machine learning models work with numbers, not strings → we use Label Encoding to convert classes into integers."
    ]
@@ -584,6 +598,134 @@
     "    df_binary['is_there_an_emotion_directed_at_a_brand_or_product']\n",
     ")\n",
     "print(dict(zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c41aeab",
+   "metadata": {},
+   "source": [
+    "### 5.3 Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3aa8a9bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training set class distribution:\n",
+      "1    0.839323\n",
+      "0    0.160677\n",
+      "Name: label, dtype: float64\n",
+      "\n",
+      "Test set class distribution:\n",
+      "1    0.839437\n",
+      "0    0.160563\n",
+      "Name: label, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#  we test on 20% of the data, stratifying to maintain class balance\n",
+    "\n",
+    "X = df_binary['cleaned_tweet']\n",
+    "y = df_binary['label']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# After split: check training distribution\n",
+    "print(\"\\nTraining set class distribution:\")\n",
+    "print(y_train.value_counts(normalize=True))\n",
+    "\n",
+    "# After split: check testing distribution\n",
+    "print(\"\\nTest set class distribution:\")\n",
+    "print(y_test.value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9fd33db",
+   "metadata": {},
+   "source": [
+    "## 6.0 Modelling and Evaluation\n",
+    "\n",
+    "The TF-IDF Vectorizer (Term Frequency–Inverse Document Frequency) transforms text data into numerical features that reflect the importance of words in documents relative to a corpus. It helps highlight words that are more relevant to specific documents while down-weighting common words that appear frequently across all documents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b47291a",
+   "metadata": {},
+   "source": [
+    "### 6.1 Baseline Model Benchmarking with Cross-Validation Pipeline\n",
+    "\n",
+    "We build and compare multiple classification models. Starting with a **baseline (DummyClassifier)**, we then evaluate algorithms such as **Naive Bayes, Logistic Regression, Random Forest, KNN, Gradient Boosting, AdaBoost, and XGBoost**. This helps us benchmark performance and identify the best model for our dataset.\n",
+    "\n",
+    "**The TF-IDF Vectorizer** (Term Frequency–Inverse Document Frequency) transforms text data into numerical features that reflect the importance of words in documents , It helps highlight words that are more relevant to specific documents while down-weighting common words that appear frequently across all documents.\n",
+    "\n",
+    "**Cross-Validation:** Evaluates models consistently using 5-fold CV and accuracy scoring.\n",
+    "\n",
+    "**smote** – Balances minority class by generating synthetic samples.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a1dda52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes: 0.7907\n",
+      "Logistic Regression: 0.8319\n",
+      "Random Forest: 0.8767\n",
+      "KNN: 0.3908\n",
+      "Gradient Boosting: 0.8182\n",
+      "AdaBoost: 0.7992\n",
+      "XGBoost: 0.8492\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define models\n",
+    "models = {\n",
+    "   \"Naive Bayes\": MultinomialNB(),\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
+    "    \"Random Forest\": RandomForestClassifier(),\n",
+    "    \"KNN\": KNeighborsClassifier(n_neighbors=5),``\n",
+    "    \"Gradient Boosting\": GradientBoostingClassifier(),\n",
+    "    \"AdaBoost\": AdaBoostClassifier(),\n",
+    "    \"XGBoost\": XGBClassifier( eval_metric='mlogloss'),\n",
+    "}\n",
+    "\n",
+    "# Function to train and evaluate with cross-validation\n",
+    "def evaluate_models(models, X_train, y_train):\n",
+    "    results = {}\n",
+    "    for name, model in models.items():\n",
+    "        pipeline = Pipeline([\n",
+    "            ('tfidf', TfidfVectorizer(max_features=5000, ngram_range=(1,2))), #Convert raw text into numerical features using TF-IDF.\n",
+    "            ('smote', SMOTE(random_state=42)), #Balances minority class by generating synthetic samples.\n",
+    "            ('clf', model)\n",
+    "        ])\n",
+    "        scores = cross_val_score(pipeline, X_train, y_train, cv=5, scoring='accuracy')\n",
+    "        results[name] = scores.mean()\n",
+    "        print(f\"{name}: {scores.mean():.4f}\")\n",
+    "    return results\n",
+    "\n",
+    "results = evaluate_models(models, X_train, y_train)\n"
    ]
   }
  ],
