--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "45f85880",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,13 @@
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to\n",
       "[nltk_data]     C:\\Users\\erastus.kaiba\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\erastus.kaiba\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "c:\\Users\\erastus.kaiba\\AppData\\Local\\anaconda3\\envs\\learn-env\\lib\\site-packages\\xgboost\\compat.py:93: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
      ]
     }
    ],
@@ -116,6 +122,7 @@
     "nltk.download('stopwords')   # Common stopwords\n",
     "nltk.download('wordnet')     # WordNet lexical database\n",
     "nltk.download('omw-1.4')     # Open Multilingual WordNet\n",
+    "nltk.download(\"averaged_perceptron_tagger\")\n",
     "\n",
     "# ==============================\n",
     "# Feature Extraction\n",
@@ -155,6 +162,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "60023606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\Users\\\\erastus.kaiba/nltk_data', 'c:\\\\Users\\\\erastus.kaiba\\\\AppData\\\\Local\\\\anaconda3\\\\envs\\\\learn-env\\\\nltk_data', 'c:\\\\Users\\\\erastus.kaiba\\\\AppData\\\\Local\\\\anaconda3\\\\envs\\\\learn-env\\\\share\\\\nltk_data', 'c:\\\\Users\\\\erastus.kaiba\\\\AppData\\\\Local\\\\anaconda3\\\\envs\\\\learn-env\\\\lib\\\\nltk_data', 'C:\\\\Users\\\\erastus.kaiba\\\\AppData\\\\Roaming\\\\nltk_data', 'C:\\\\nltk_data', 'D:\\\\nltk_data', 'E:\\\\nltk_data']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "print(nltk.data.path)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8c7578c8",
    "metadata": {},
@@ -164,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "id": "13b7bf77",
    "metadata": {},
    "outputs": [
@@ -273,7 +299,7 @@
        "4                                   Positive emotion  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "id": "4e81b42f",
    "metadata": {},
    "outputs": [
@@ -322,7 +348,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "25d06906",
    "metadata": {},
    "outputs": [
@@ -397,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "id": "2c0c3e0b",
    "metadata": {},
    "outputs": [
@@ -440,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "id": "435299e9",
    "metadata": {},
    "outputs": [
@@ -497,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "id": "572bc79b",
    "metadata": {},
    "outputs": [
@@ -553,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "id": "78db59a3",
    "metadata": {},
    "outputs": [],
@@ -600,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "id": "922ed5ce",
    "metadata": {},
    "outputs": [
@@ -630,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "id": "3aa8a9bb",
    "metadata": {},
    "outputs": [
@@ -701,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "7a1dda52",
    "metadata": {},
    "outputs": [
@@ -759,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "b036f2ab",
    "metadata": {},
    "outputs": [
@@ -780,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "f0a25cf7",
    "metadata": {},
    "outputs": [
@@ -809,7 +835,7 @@
    ],
    "source": [
     "# refit the best model pipeline on training data  \n",
-    "# our best Model is Random Forest with accuracy 0.8724\n",
+    "# our best Model is Logistic with accuracy 0.7119\n",
     "best_pipeline = ImbPipeline([\n",
     "       ('tfidf', TfidfVectorizer(max_features=5000, ngram_range=(1,2))),\n",
     "      (\"oversample\", RandomOverSampler(random_state=42)),\n",
@@ -829,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "924fcba5",
    "metadata": {},
    "outputs": [
@@ -887,13 +913,12 @@
    "metadata": {},
    "source": [
     "#### **Observations**\n",
-    "- Overall Accuracy is high (88%), so the model is performing well,But class imbalance is visible:\n",
+    "- Overall Accuracy is high (84%), so the model is performing well,But class imbalance is visible:\n",
     "\n",
-    "Class 1 is dominant → model is excellent at detecting it (Recall = 0.98).\n",
+    "Class 1 is dominant → model is excellent at detecting it (Recall = 0.89).\n",
     "\n",
-    "Class 0 is under-represented → model struggles (Recall = 0.37).\n",
-    "\n",
-    "So even though accuracy is high, the minority class is not well detected."
+    "Class 0 is under-represented → model struggles (Recall = 0.058).\n",
+    "\n"
    ]
   },
   {
@@ -901,13 +926,13 @@
    "id": "7a964fec",
    "metadata": {},
    "source": [
-    "### 6.4 Best Model Hyperparameter Tuning (TF-IDF + Random Forest)\n",
+    "### 6.4 Best Model Hyperparameter Tuning (with TF-IDF )\n",
     "Random Forest was best, but we can try RandomizedSearchCV to see if tuning improves performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "125290e0",
    "metadata": {},
    "outputs": [
@@ -977,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "786219e7",
    "metadata": {},
    "outputs": [
