evaluate for the top features

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -1263,61 +1263,172 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4797c603",
+   "metadata": {},
+   "source": [
+    "## Top features evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "76ed5ede",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 features for class 'Negative emotion':\n",
+      "fail: 8.1972\n",
+      "hate: 7.7279\n",
+      "headache: 7.5290\n",
+      "wont: 6.4531\n",
+      "long: 6.3512\n",
+      "ridic: 6.2699\n",
+      "enough: 6.2501\n",
+      "guessing: 5.8135\n",
+      "crash: 5.4489\n",
+      "didnt: 5.2534\n",
+      "\n",
+      "Top 10 features for class 'Neutral':\n",
+      "link: 7.0649\n",
+      "cool: 5.7892\n",
+      "great: 5.2365\n",
+      "free: 5.1952\n",
+      "awesome: 5.1012\n",
+      "party: 4.8406\n",
+      "winning: 4.5998\n",
+      "week: 4.1932\n",
+      "smart: 3.8865\n",
+      "win: 3.8285\n",
+      "\n",
+      "Example predictions:\n",
+      "\n",
+      "Text: Queue up now... #Apple set to open popup shop in core of #SXSW action for #iPad2 {link}\n",
+      "True: Neutral, Predicted: Negative emotion\n",
+      "Incorrect!\n",
+      "\n",
+      "Text: Whoa. RT @mention Google to Launch Major New Social Network Called Circles, Possibly Today {link} #sxsw\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: #sxsw @mention das VerpixelungsrechtÛÓthe right for your house to be pixelated in Google Street ViewÛÓ is a theft from the public\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: RT @mention Woot!! Just won the #google #lego hackathon competition. #SXSW #startupbus #cle\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: RT @mention @mention Just won an HTML5 t-shirt from google for saying that EaselJS is my favorite canvas library at #sxsw.\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: Google engineer said..for search personalizing experience not scary..but making it relevant for people. #sxsw #mktgmoment\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: #pubcamp #kirkus #sxsw download Qrank on your ipad/iphone before you come to pubcamp sxsw 2011 - prizes!\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: Person in front of me just took a picture with his new iPad #sxsw\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: RT @mention Sketchily lurking @mention big boi #sxsw concert on iPhone business with 8am HARD (read: massive announcement) deadline. #lovemyjob @mention\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n",
+      "\n",
+      "Text: At the sony area at buffalo billards tweeting from a google tv. #sxsw\n",
+      "True: Neutral, Predicted: Neutral\n",
+      "Correct!\n"
+     ]
+    }
+   ],
    "source": [
-    "# # Top features per class + bar charts\n",
-    "# # -----------------------------\n",
-    "# try:\n",
-    "#     tfidf = best_pipeline_tuned.named_steps['tfidf']  # direct pipeline\n",
-    "# except KeyError:\n",
-    "#     preprocessor = best_pipeline_tuned.named_steps['preprocessor']\n",
-    "#     tfidf = preprocessor.named_transformers_['text']\n",
+    "# Top features \n",
+    "# -----------------------------\n",
+    "try:\n",
+    "    tfidf = best_pipeline_tuned.named_steps['tfidf']  # direct pipeline\n",
+    "except KeyError:\n",
+    "    preprocessor = best_pipeline_tuned.named_steps['preprocessor']\n",
+    "    tfidf = preprocessor.named_transformers_['text']\n",
     "\n",
-    "# # Safe method for feature names\n",
-    "# if hasattr(tfidf, \"get_feature_names_out\"):\n",
-    "#     tfidf_features = tfidf.get_feature_names_out()\n",
-    "# else:\n",
-    "#     tfidf_features = tfidf.get_feature_names()\n",
+    "# Safe method for feature names\n",
+    "# the purpose here is to the names of all features (words) learned by the TF-IDF vectorizer.\n",
+    "if hasattr(tfidf, \"get_feature_names_out\"):\n",
+    "    tfidf_features = tfidf.get_feature_names_out()\n",
+    "else:\n",
+    "    tfidf_features = tfidf.get_feature_names()\n",
     "\n",
-    "# clf = best_pipeline_tuned.named_steps['clf']\n",
+    "clf = best_pipeline_tuned.named_steps['clf']\n",
     "\n",
-    "# # Handle binary vs multi-class coefficients\n",
-    "# if len(clf.coef_) == 1:  # binary classification\n",
-    "#     coefs = [ -clf.coef_[0], clf.coef_[0] ]  # class 0 vs class 1\n",
-    "# else:  # multi-class\n",
-    "#     coefs = clf.coef_\n",
+    "# Handle binary vs multi-class coefficients\n",
+    "if len(clf.coef_) == 1:  # binary classification\n",
+    "    coefs = [ -clf.coef_[0], clf.coef_[0] ]  # class 0 vs class 1\n",
+    "else:  # multi-class\n",
+    "    coefs = clf.coef_\n",
     "\n",
-    "# # Show top 10 features per class\n",
-    "# for i, class_label in enumerate(unique_labels):\n",
-    "#     class_name = le.inverse_transform([class_label])[0]\n",
-    "#     coef = coefs[i]\n",
-    "#     top_idx = np.argsort(coef)[-10:][::-1]\n",
-    "#     top_words = [tfidf_features[idx] for idx in top_idx]\n",
-    "#     top_scores = coef[top_idx]\n",
+    "# Show top 10 features per class\n",
+    "# Display the most important features (words) for each class.\n",
     "\n",
-    "#     print(f\"\\nTop 10 features for class '{class_name}':\")\n",
-    "#     for word, score in zip(top_words, top_scores):\n",
-    "#         print(f\"{word}: {score:.4f}\")\n",
+    "# np.argsort(coef)[-10:][::-1] selects indices of the top 10 largest coefficients in descending order.\n",
+    "for i, class_label in enumerate(unique_labels):\n",
+    "    class_name = le.inverse_transform([class_label])[0]\n",
+    "    coef = coefs[i]\n",
+    "    top_idx = np.argsort(coef)[-10:][::-1]\n",
+    "    top_words = [tfidf_features[idx] for idx in top_idx]\n",
+    "    top_scores = coef[top_idx]\n",
     "\n",
-    "# # -----------------------------\n",
-    "# # Example predictions\n",
-    "# # -----------------------------\n",
-    "# print(\"\\nExample predictions:\")\n",
-    "# sample_size = min(10, len(X_test))\n",
-    "# sample_indices = np.random.choice(len(X_test), sample_size, replace=False)\n",
+    "    print(f\"\\nTop 10 features for class '{class_name}':\")\n",
+    "    for word, score in zip(top_words, top_scores):\n",
+    "        print(f\"{word}: {score:.4f}\")\n",
     "\n",
-    "# for idx in sample_indices:\n",
-    "#     original_text = df.iloc[X_test.index[idx]]['tweet_text']\n",
-    "#     true_sentiment = le.inverse_transform([y_test.iloc[idx]])[0]\n",
-    "#     pred_sentiment = le.inverse_transform([y_pred_tuned[idx]])[0]\n",
+    "# -----------------------------\n",
+    "# Example predictions\n",
+    "# -----------------------------\n",
+    "print(\"\\nExample predictions:\")\n",
+    "sample_size = min(10, len(X_test))\n",
+    "sample_indices = np.random.choice(len(X_test), sample_size, replace=False)\n",
     "\n",
-    "#     print(f\"\\nText: {original_text}\")\n",
-    "#     print(f\"True: {true_sentiment}, Predicted: {pred_sentiment}\")\n",
-    "#     print(\"Correct!\" if true_sentiment == pred_sentiment else \"Incorrect!\")"
+    "# Loop through the random samples.\n",
+    "# Retrieves:\n",
+    "# Original tweet text (original_text)\n",
+    "# True sentiment label (true_sentiment)\n",
+    "# Predicted sentiment label (pred_sent_sentiment)\n",
+    "# Prints the text, true label, predicted label, and whether the prediction was correct.\n",
+    "for idx in sample_indices:\n",
+    "    original_text = df.iloc[X_test.index[idx]]['tweet_text']\n",
+    "    true_sentiment = le.inverse_transform([y_test.iloc[idx]])[0]\n",
+    "    pred_sentiment = le.inverse_transform([y_pred_tuned[idx]])[0]\n",
+    "\n",
+    "    print(f\"\\nText: {original_text}\")\n",
+    "    print(f\"True: {true_sentiment}, Predicted: {pred_sentiment}\")\n",
+    "    print(\"Correct!\" if true_sentiment == pred_sentiment else \"Incorrect!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "875c8bfa",
+   "metadata": {},
+   "source": [
+    "Class: Negative emotion\n",
+    "Top three features:\n",
+    "fail (8.1972) → This word strongly indicates a negative sentiment. Tweets containing “fail” are very likely to express dissatisfaction or frustration.\n",
+    "hate (7.7279) → “Hate” is another strong indicator of negative emotion; it signals strong dislike or anger.\n",
+    "headache (7.5290) → This word suggests annoyance or a problem, which is associated with negative sentiment.\n",
+    "Interpretation: The model has learned that words expressing problems, dislike, or frustration are highly predictive of a negative emotion class.\n",
+    "\n",
+    "Class: Neutral\n",
+    "Top three features:\n",
+    "link (7.0649) → “Link” appears often in neutral tweets, likely when people are just sharing information or a URL without emotion.\n",
+    "cool (5.7892) → Although somewhat positive, “cool” is often used casually and may not convey strong sentiment, so the model associates it with neutral content.\n",
+    "great (5.2365) → Again, while slightly positive, in the context of tweets it might appear in neutral or generic statements, so the model considers it a neutral indicator.\n",
+    "Interpretation: Neutral tweets often contain words that are informational, casual, or lightly positive without expressing strong emotions."
    ]
   },
   {
