--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -1328,14 +1328,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "01c7ebe7",
-   "metadata": {},
-   "source": [
-    "The visualization above clearly shows what "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "e914f714",
@@ -1381,8 +1373,8 @@
     "For Negative Emotion:\n",
     "The top bars represent words like “fail,” “hate,” “headache.” The longer the bar, the more strongly the model associates that word with negative sentiment. These words are the key “signals” the model uses to classify a tweet as negative.\n",
     "\n",
-    "For Neutral:\n",
-    "The top bars represent words like “link,” “cool,” “great.” They are indicators of neutral content, which often appears in informational or casual tweets.\n",
+    "For Positive Emotion:\n",
+    "The top bars represent words like “link,” “cool,” “great.” They are indicators of positive content, which often appears in informational or casual tweets.\n",
     "\n",
     "Key Insights from Visualization\n",
     "\n",
