--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -1607,7 +1607,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
+   "id": "ca238bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"sklearn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "eab1a365",
    "metadata": {},
    "outputs": [
@@ -1615,22 +1626,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\SYDNEY\\anaconda3\\envs\\learn-env\\lib\\site-packages\\sklearn\\model_selection\\_search.py:979: UserWarning: One or more of the test scores are non-finite: [nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-      " nan nan]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n",
       "Best Parameters: {'tfidf__ngram_range': (1, 1), 'tfidf__max_features': 7000, 'clf__solver': 'liblinear', 'clf__penalty': 'l2', 'clf__C': 10.0}\n",
       "Best CV F1 Score: 0.556291904668427\n"
      ]
